<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/color_tab_1"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_weight="0.16">

        <EditText
            android:id="@+id/editTextIme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Ime"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="@color/cardview_light_background"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/editTextPrezime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Prezime"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="@color/cardview_light_background"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Email"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="@color/cardview_light_background"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/editTextKorIme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Korisničko ime"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="@color/cardview_light_background"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/editTextLozinka"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Lozinka"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="@color/cardview_light_background"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            />

        <Button
            android:id="@+id/btnRegistrirajSe"
            android:text="Registriraj se"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/cardview_shadow_start_color"
            android:textColor="@color/cardview_light_background"

            />


    </LinearLayout>

</LinearLayout>