<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
android:layout_height="fill_parent"

android:gravity="center"
android:orientation="vertical"
android:padding="10dp"
    android:background="@color/color_tab_1"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_marginBottom="50dp"
        app:srcCompat="@drawable/logo"
        android:id="@+id/imageView"
        android:layout_weight="0.35" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <EditText
            android:id="@+id/kor_ime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Korisničko ime"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="@color/cardview_light_background"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            />



        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Lozinka"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="@color/cardview_light_background"
            android:inputType="textPassword"
            android:padding="10dp"
            />


        <Button
            android:id="@+id/btnLogin"
            android:text="Prijava"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/cardview_shadow_start_color"
            android:textColor="@color/cardview_light_background"


            />
        <Button
            android:id="@+id/btnReg"
            android:text="Registracija"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/cardview_shadow_start_color"
            android:textColor="@color/cardview_light_background"

            />


    </LinearLayout>

</LinearLayout>